2005-11-21  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.c
	(gimp_scrolled_preview_area_event): scroll using the mouse wheel.

2005-11-21  Sven Neumann  <sven@gimp.org>

	* menus/image-menu.xml.in: added "Animators" placeholder.

	* plug-ins/script-fu/script-fu.c (script_fu_extension_init):
	removed registration of "Animators" submenu.

2005-11-21  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpforegroundselectoptions.[ch]
	* app/tools/gimpforegroundselecttool.c: renamed "discontiguous" to
	"continuous", both in the UI and as a variable.

2005-11-21  Sven Neumann  <sven@gimp.org>

	* app/actions/context-actions.c (context_brush_radius_actions):
	added default keyboard shortcuts for changing the brush radius
	as suggested in bug #322028.

2005-11-21  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpzoommodel.c (gimp_zoom_button_new): connect
	to the model's "zoomed" signal and set the button sensitivity.

2005-11-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/MapObject/mapobject_main.[ch]
	* plug-ins/MapObject/mapobject_preview.c
	* plug-ins/MapObject/mapobject_ui.c: must not keep pointers in the
	struct that is being used to preserve data between invocations of
	the plug-in. Fixes bug #321932.

2005-11-19  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimppaintoptions-gui.c
	* app/tools/gimpselectionoptions.c: code cleanup.

2005-11-19  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpaligntool.c
	* app/tools/gimpcolortool.c
	* app/tools/gimpfliptool.c
	* app/tools/gimpmagnifytool.c
	* app/tools/gimpmovetool.c
	* app/tools/gimptransformtool.c
	* app/tools/gimpvectortool.c: started to get rid of all stock GDK
	cursors in preparation of fixing bug #158407.

2005-11-18  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpgradienteditor.c (view_events):
	* app/widgets/gimpnavigationview.c (gimp_navigation_view_scroll):
	changed wheel scrolling to be HIG-compliant (control zooms). Also